# ucm_microservicios

./: README.md  compose.yaml
services/api/: .env  Dockerfile  pyproject.toml
services/api/src/almacen/: config.py  main.py
services/api/src/almacen/db/: connection.py  tables.py
services/api/src/almacen/endpoints/: productos.py
services/api/src/almacen/models/: models.py
services/db/: db.env
services/reverse_proxy/: nginx.conf
